--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "lightbox-react": "^0.3.8",
+    "moment": "^2.29.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-items-carousel": "^2.8.0",
+    "react-material-ui-carousel": "^3.2.0",
+    "react-scroll-to-top": "^1.0.8",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "typescript": "^4.5.5"
   }
 }
